Compiled pdf and added to .gitignore

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------
 % Document class and package definitions
 %-------------------------------------------------------------------
-\documentclass[12pt,a4paper,openright,final,twoside]{main}
+\documentclass[12pt,a4paper,openright,final,twoside,ieeetran]{main}
 
 %Included for Gather Purpose only:
 %input "thesisreferences.bib"
