Live practice with Git

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -14,14 +14,14 @@
 %-------------------------------------------------------------------
 % Define title, author, etc.
 %-------------------------------------------------------------------
-\def\thesistitle{Embedded IoT for Eclipse Arrowhead}
+\def\thesistitle{Embedded IoT System for Eclipse Arrowhead}
 \def\theauthor{Albin Martinsson}
 \def\theaddress{Dept.\ of Computer Science and Electrical Engineering\\
 Lule{\aa} University of Technology\\ Lule{\aa}, Sweden}
 
 \def\supervisors{Jan van Deventer}
 \def\supervisorstring{Supervisor:} % Edit here if you have only one supervisor
-\def\dedication{To my dad Bengt-Göran Martinsson a special thanks for proof reading is required...}
+\def\dedication{To my dad Bengt-Göran Martinsson, a special thanks for proof reading is required...}
 
 % Read abstract and preface from separate files.
 % Make sure these exist. See example files.
