Added referneces and worte on related work & intro

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -3,13 +3,15 @@
 %-------------------------------------------------------------------
 \documentclass[12pt,a4paper,openright,final,twoside,ieeetran]{main}
 
+
+
 %Included for Gather Purpose only:
 %input "thesisreferences.bib"
 
 \begin{document}
 
-\defaultbibliography{thesisreferences}     %% Change this only.
-\defaultbibliographystyle{ieeetran}        %% Could be changed if you like 
+\defaultbibliography{thesisreferences.bib}     %% Change this only.
+\defaultbibliographystyle{unsrt}        %% Could be changed if you like 
                                            %% references typeset differently.
 %-------------------------------------------------------------------
 % Define title, author, etc.
