--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -1,17 +1,108 @@
-@BOOK{Lamport,
-  AUTHOR =       "L. Lamport",
-  TITLE =        "\LaTeX, A Document Preparation System: User's Guide And Reference Manual",
-  PUBLISHER =    "Pearson Professional Education",
-  YEAR =         "1994",
-  address =      "New York",
+@report{Hozdic2015,
+   abstract = {Parallel to the development of information-communication technologies, the Internet, wireless networks, production networks, developed and industrial production which experienced a strong and profound changes. Factories have become more flexible than ever to complex modern market turbulence. Modern concepts of production systems require vertical and horizontal integration of all participants in the production process. This integration determines the foundation of a new, radical change in the mode of production by German industrialists called the industry is 4.0. In this, the smart production environment, structuring the smart factory. Smart factory is a production solution in a flexible and efficient way should be to meet the needs of today's market, and achieves integration between the various industrial and non-industrial partners who build dynamic, and very often and virtual organizations. This type of integration, linking the physical components of the production system and digital, abstract, virtual components into a single system called cyber-physical production systems. Systems are the backbone for the smart factory. Cyber-physical systems of production will be structured so that they can respond to almost any change in the market in time within really smart factories, but also beyond its borders. This not only makes production faster and in accordance with the specific requirements of individual customers, but also allows to production processes within the company are optimized through a network of global cooperation, adaptive and evolutionary and self-organizing. The potential for savings and innovation in these production systems and production operators is huge. Implementation of cyber-physical production systems in smart factories providing management with real-time, which is one of the fundamental principles of a new era in the sphere of industrial production.},
+   author = {Elvis Hozdić},
+   issue = {1},
+   journal = {International Journal of Modern Manufacturing Technologies},
+   keywords = {Cyber-physical production systems,Industry 40,information-communication technology,real-time control,smart manufacturing},
+   pages = {2067-3604},
+   title = {SMART FACTORY FOR INDUSTRY 4.0: A REVIEW},
+   volume = {VII},
+   url = {https://modtech.ro/international-journal/vol7no12015/Hozdic_Elvis.pdf},
+   year = {2015},
+}
+@article{Shariatzadeh2016,
+   author = {N Shariatzadeh and T Lundholm and L Lindberg and G Sivard - Procedia Cirp and undefined 2016},
+   journal = {Elsevier},
+   title = {Integration of digital factory with smart factory based on Internet of Things},
+   url = {https://www.sciencedirect.com/science/article/pii/S2212827116305066},
+}
+@article{Chen2017,
+   abstract = {Due to the current structure of digital factory, it is necessary to build the smart factory to upgrade the manufacturing industry. Smart factory adopts the combination of physical technology and cyber technology and deeply integrates previously independent discrete systems making the involved technologies more complex and precise than they are now. In this paper, a hierarchical architecture of the smart factory was proposed first, and then the key technologies were analyzed from the aspects of the physical resource layer, the network layer, and the data application layer. In addition, we discussed the major issues and potential solutions to key emerging technologies, such as Internet of Things (IoT), big data, and cloud computing, which are embedded in the manufacturing process. Finally, a candy packing line was used to verify the key technologies of smart factory, which showed that the overall equipment effectiveness of the equipment is significantly improved.},
+   author = {Baotong Chen and Jiafu Wan and Lei Shu and Peng Li and Mithun Mukherjee and Boxing Yin},
+   doi = {10.1109/ACCESS.2017.2783682},
+   issn = {21693536},
+   journal = {IEEE Access},
+   keywords = {Smart factory,big data,cloud computing,cyber-physical systems,industrial Internet of Things},
+   month = {12},
+   pages = {6505-6519},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Smart Factory of Industry 4.0: Key Technologies, Application Case, and Challenges},
+   volume = {6},
+   year = {2017},
+}
+@article{Meneghello2019,
+   abstract = {The Internet of Things (IoT) is rapidly spreading, reaching a multitude of different domains, including personal health care, environmental monitoring, home automation, smart mobility, and Industry 4.0. As a consequence, more and more IoT devices are being deployed in a variety of public and private environments, progressively becoming common objects of everyday life. It is hence apparent that, in such a scenario, cybersecurity becomes critical to avoid threats like leakage of sensible information, denial of service (DoS) attacks, unauthorized network access, and so on. Unfortunately, many low-end IoT commercial products do not usually support strong security mechanisms, and can hence be target of - or even means for - a number of security attacks. The aim of this article is to provide a broad overview of the security risks in the IoT sector and to discuss some possible counteractions. To this end, after a general introduction to security in the IoT domain, we discuss the specific security mechanisms adopted by the most popular IoT communication protocols. Then, we report and analyze some of the attacks against real IoT devices reported in the literature, in order to point out the current security weaknesses of commercial IoT solutions and remark the importance of considering security as an integral part in the design of IoT systems. We conclude this article with a reasoned comparison of the considered IoT technologies with respect to a set of qualifying security attributes, namely integrity, anonymity, confidentiality, privacy, access control, authentication, authorization, resilience, self organization.},
+   author = {Francesca Meneghello and Matteo Calore and Daniel Zucchetto and Michele Polese and Andrea Zanella},
+   doi = {10.1109/JIOT.2019.2935189},
+   issn = {23274662},
+   issue = {5},
+   journal = {IEEE Internet of Things Journal},
+   keywords = {Attacks,Internet of Things (IoT),devices,security},
+   month = {10},
+   pages = {8182-8201},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {IoT: Internet of Threats? A Survey of Practical Security Vulnerabilities in Real IoT Devices},
+   volume = {6},
+   year = {2019},
+}
+@article{Xu2018,
+   abstract = {Rapid advances in industrialisation and informatisation methods have spurred tremendous progress in developing the next generation of manufacturing technology. Today, we are on the cusp of the Fourth Industrial Revolution. In 2013, amongst one of 10 ‘Future Projects’ identified by the German government as part of its High-Tech Strategy 2020 Action Plan, the Industry 4.0 project is considered to be a major endeavour for Germany to establish itself as a leader of integrated industry. In 2014, China’s State Council unveiled their ten-year national plan, Made-in-China 2025, which was designed to transform China from the world’s workshop into a world manufacturing power. Made-in-China 2025 is an initiative to comprehensively upgrade China’s industry including the manufacturing sector. In Industry 4.0 and Made-in-China 2025, many applications require a combination of recently emerging new technologies, which is giving rise to the emergence of Industry 4.0. Such technologies originate from different disciplines including cyber-physical Systems, IoT, cloud computing, Industrial Integration, Enterprise Architecture, SOA, Business Process Management, Industrial Information Integration and others. At this present moment, the lack of powerful tools still poses a major obstacle for exploiting the full potential of Industry 4.0. In particular, formal methods and systems methods are crucial for realising Industry 4.0, which poses unique challenges. In this paper, we briefly survey the state of the art in the area of Industry 4.0 as it relates to industries.},
+   author = {Li Da Xu and Eric L. Xu and Ling Li},
+   doi = {10.1080/00207543.2018.1444806},
+   issn = {1366588X},
+   issue = {8},
+   journal = {International Journal of Production Research},
+   keywords = {Blockchain,Cloud computing,Cyber-physical systems,Emerging technology,Enterprise architecture,Industrial information integration,Industrial integration,Industrie 4.0,Industry 4.0,Interoperability,IoT,Made-in-China 2025,Manufacturing,SOA},
+   pages = {2941-2962},
+   publisher = {Taylor and Francis Ltd.},
+   title = {Industry 4.0: State of the art and future trends},
+   volume = {56},
+   url = {https://www.tandfonline.com/doi/abs/10.1080/00207543.2018.1444806},
+   year = {2018},
+}
+@article{Lasi2014,
+   author = {Heiner Lasi and Peter Fettke and Hans Georg Kemper and Thomas Feld and Michael Hoffmann},
+   doi = {10.1007/s12599-014-0334-4},
+   issn = {18670202},
+   issue = {4},
+   journal = {Business and Information Systems Engineering},
+   keywords = {Business and Management,IT in Business,general},
+   month = {8},
+   pages = {239-242},
+   publisher = {Gabler Verlag},
+   title = {Industry 4.0},
+   volume = {6},
+   url = {https://link.springer.com/article/10.1007/s12599-014-0334-4},
+   year = {2014},
+}
+@inproceedings{Vaidya2018,
+   abstract = {Digitization and intelligentization of manufacturing process is the need for today's industry. The manufacturing industries are currently changing from mass production to customized production. The rapid advancements in manufacturing technologies and applications in the industries help in increasing productivity. The term Industry 4.0 stands for the fourth industrial revolution which is defined as a new level of organization and control over the entire value chain of the life cycle of products; it is geared towards increasingly individualized customer requirements. Industry 4.0 is still visionary but a realistic concept which includes Internet of Things, Industrial Internet, Smart Manufacturing and Cloud based Manufacturing. Industry 4.0 concerns the strict integration of human in the manufacturing process so as to have continuous improvement and focus on value adding activities and avoiding wastes. The objective of this paper is to provide an overview of Industry 4.0 and understanding of the nine pillars of Industry 4.0 with its applications and identifying the challenges and issues occurring with implementation the Industry 4.0 and to study the new trends and streams related to Industry 4.0.},
+   author = {Saurabh Vaidya and Prashant Ambad and Santosh Bhosle},
+   doi = {10.1016/j.promfg.2018.02.034},
+   issn = {23519789},
+   journal = {Procedia Manufacturing},
+   keywords = {Cloud based Manufacturing,Cyber Physical System,Industry 4.0,Internet of Things,Smart Manufacturing},
+   month = {1},
+   pages = {233-238},
+   publisher = {Elsevier B.V.},
+   title = {Industry 4.0 - A Glimpse},
+   volume = {20},
+   year = {2018},
+}
+@article{Github2021,
+   title = {eclipse-arrowhead/core-java-spring},
+   url = {https://github.com/eclipse-arrowhead/core-java-spring},
+}
+@book{Delsing2017,
+   author = {Delsing Jerker},
+   title = {IoT Automation: Arrowhead Framework - 1st Edition - Jerker Delsing -},
+   url = {https://www.routledge.com/IoT-Automation-Arrowhead-Framework/Delsing/p/book/9780367658144},
+   year = {2017},
+}
+@article{ST2020,
+   title = {The IoT Rundown For 2020: Stats, Risks, and Solutions -- Security Today},
+   url = {https://securitytoday.com/Articles/2020/01/13/The-IoT-Rundown-for-2020.aspx?Page=2},
 }
 
-@BOOK{Goossens,
-  AUTHOR =       "M. Goossens and F. Mittelbach and A. Samarin",
-  TITLE =        "The \LaTeX\ Companion",
-  PUBLISHER =    "Addison-Wesley",
-  YEAR =         "1994",
-  OPTaddress =      "",
-  OPTedition =      "",
-  isbn =         "0201541998",
-}
+
+
