--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -1,3 +1,132 @@
+@inproceedings{HTTP2021,
+   title = {An overview of HTTP - HTTP | MDN},
+   url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview},
+}
+@inproceedings{MQTT2021,
+   title = {MQTT - The Standard for IoT Messaging},
+   url = {https://mqtt.org/},
+}
+@inproceedings{Mahmoud2016,
+   abstract = {The paper presents a survey and analysis on the current status and concerns of Internet of things (IoT) security. The IoT framework aspires to connect anyone with anything at anywhere. IoT typically has a three layers architecture consisting of Perception, Network, and Application layers. A number of security principles should be enforced at each layer to achieve a secure IoT realization. The future of IoT framework can only be ensured if the security issues associated with it are addressed and resolved. Many researchers have attempted to address the security concerns specific to IoT layers and devices by implementing corresponding countermeasures. This paper presents an overview of security principles, technological and security challenges, proposed countermeasures, and the future directions for securing the IoT.},
+   author = {Rwan Mahmoud and Tasneem Yousuf and Fadi Aloul and Imran Zualkernan},
+   doi = {10.1109/ICITST.2015.7412116},
+   isbn = {9781908320520},
+   journal = {2015 10th International Conference for Internet Technology and Secured Transactions, ICITST 2015},
+   keywords = {Internet of things,IoT,Security},
+   month = {2},
+   pages = {336-341},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Internet of things (IoT) security: Current status, challenges and prospective measures},
+   year = {2016},
+}
+@inproceedings{Al-Sarawi2017,
+   abstract = {Internet of Things (IoT) consists of smart devices that communicate with each other. It enables these devices to collect and exchange data. Besides, IoT has now a wide range of life applications such as industry, transportation, logistics, healthcare, smart environment, as well as personal, social gaming robot, and city information. Smart devices can have wired or wireless connection. As far as the wireless IoT is the main concern, many different wireless communication technologies and protocols can be used to connect the smart device such as Internet Protocol Version 6 (IPv6), over Low power Wireless Personal Area Networks (6LoWPAN), ZigBee, Bluetooth Low Energy (BLE), Z-Wave and Near Field Communication (NFC). They are short range standard network protocols, while SigFox and Cellular are Low Power Wide Area Network (LPWAN).standard protocols. This paper will be an attempt to review different communication protocols in IoT. In addition, it will compare between commonly IoT communication protocols, with an emphasis on the main features and behaviors of various metrics of power consumption security spreading data rate, and other features. This comparison aims at presenting guidelines for the researchers to be able to select the right protocol for different applications.},
+   author = {Shadi Al-Sarawi and Mohammed Anbar and Kamal Alieyan and Mahmood Alzubaidi},
+   doi = {10.1109/ICITECH.2017.8079928},
+   isbn = {9781509063321},
+   journal = {ICIT 2017 - 8th International Conference on Information Technology, Proceedings},
+   keywords = {6LoWPAN,AES,ASK,BLE,BPSK,BT,CCK,COFDM,DBPSK,DSSS,ESP,FHSS,ICT,IPv6,IoT,MAC,NFC,O-QPSK,OFDM,RC4,TDMS and UNB,WPAN,WSNs},
+   month = {10},
+   pages = {685-690},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Internet of Things (IoT) communication protocols: Review},
+   year = {2017},
+}
+@article{Atzori2010,
+   abstract = {This paper addresses the Internet of Things. Main enabling factor of this promising paradigm is the integration of several technologies and communications solutions. Identification and tracking technologies, wired and wireless sensor and actuator networks, enhanced communication protocols (shared with the Next Generation Internet), and distributed intelligence for smart objects are just the most relevant. As one can easily imagine, any serious contribution to the advance of the Internet of Things must necessarily be the result of synergetic activities conducted in different fields of knowledge, such as telecommunications, informatics, electronics and social science. In such a complex scenario, this survey is directed to those who want to approach this complex discipline and contribute to its development. Different visions of this Internet of Things paradigm are reported and enabling technologies reviewed. What emerges is that still major issues shall be faced by the research community. The most relevant among them are addressed in details. © 2010 Elsevier B.V. All rights reserved.},
+   author = {Luigi Atzori and Antonio Iera and Giacomo Morabito},
+   doi = {10.1016/j.comnet.2010.05.010},
+   issn = {13891286},
+   issue = {15},
+   journal = {Computer Networks},
+   keywords = {Internet of Things,Pervasive computing,RFID systems},
+   month = {10},
+   pages = {2787-2805},
+   publisher = {Elsevier},
+   title = {The Internet of Things: A survey},
+   volume = {54},
+   year = {2010},
+}
+@inproceedings{Naik2017,
+   abstract = {The standard and real-time communication technology is an unalloyed inevitability for the development of Internet of Things (IoT) applications. However, the selection of a standard and effective messaging protocol is a challenging and daunting task for any organisation because it depends on the nature of the IoT system and its messaging requirements. Copious messaging protocols have been developed and employed by various organisations based on their requirements in the last two decades. Though, none of them is able to support all messaging requirements of all types of IoT systems. Messaging protocol is an ongoing dilemma for the IoT industry; consequently, it is important to understand the pros and cons of the widely accepted and emerging messaging protocols for IoT systems to determine their best-fit scenarios. Therefore, this paper presents an evaluation of the four established messaging protocols MQTT, CoAP, AMQP and HTTP for IoT systems. Firstly, it presents the broad comparison among these messaging protocols to introduce their characteristics comparatively. Afterwards, it performs a further in-depth and relative analysis based on some interrelated criteria to gain insight into their strengths and limitations. Thus, based on this detailed evaluation, the user can decide their appropriate usage in various IoT systems according to their requirements and suitability.},
+   author = {Nitin Naik},
+   doi = {10.1109/SysEng.2017.8088251},
+   isbn = {9781538634035},
+   journal = {2017 IEEE International Symposium on Systems Engineering, ISSE 2017 - Proceedings},
+   keywords = {AMQP,CoAP,HTTP,Interoperability,IoT Systems,M2M Communication,MQTT,Messaging Protocol,Quality of Services},
+   month = {10},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Choice of effective messaging protocols for IoT systems: MQTT, CoAP, AMQP and HTTP},
+   year = {2017},
+}
+@inproceedings{Wukkadada2018,
+   abstract = {Internet of Things (IoT) can be defined as a physical object which are connected over internet or an embedded system which consists of electronics, software, sensors, and connectivity module like modem or Wi-Fi which enable the device to connect over internet so that data can be exchanged and will be able to control the embedded device from anywhere over internet. IoT devices helps to connect all sensors which help to monitor and control electronic or mechanical systems. IoT system are very useful in industries where humans are unable to enter like a radiation room etc. Nowadays IoT systems are used in government sectors for security and in-home security and home automation [4]. But still it's not common as the cost of IoT devices is high and the modularity is less. To make the device modular we need to find a best way of communication protocol so that the latency of the communication will be less. This paper presents the comparison of best to protocol and which is the best protocol which we need to use to reduce the latency and make the device modular and able to control remotely.},
+   author = {Bharati Wukkadada and Kirti Wankhede and Ramith Nambiar and Amala Nair},
+   doi = {10.1109/ICIRCA.2018.8597401},
+   isbn = {9781538624562},
+   journal = {Proceedings of the International Conference on Inventive Research in Computing Applications, ICIRCA 2018},
+   keywords = {Internet of Things (IoT),MQTT,SSL (Secure Socket layer),TLS (Transport Layer Security)},
+   month = {12},
+   pages = {249-253},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Comparison with HTTP and MQTT in Internet of Things (IoT)},
+   year = {2018},
+}
+@generic{Hassija2019,
+   abstract = {The Internet of Things (IoT) is the next era of communication. Using the IoT, physical objects can be empowered to create, receive, and exchange data in a seamless manner. Various IoT applications focus on automating different tasks and are trying to empower the inanimate physical objects to act without any human intervention. The existing and upcoming IoT applications are highly promising to increase the level of comfort, efficiency, and automation for the users. To be able to implement such a world in an ever-growing fashion requires high security, privacy, authentication, and recovery from attacks. In this regard, it is imperative to make the required changes in the architecture of the IoT applications for achieving end-to-end secure IoT environments. In this paper, a detailed review of the security-related challenges and sources of threat in the IoT applications is presented. After discussing the security issues, various emerging and existing technologies focused on achieving a high degree of trust in the IoT applications are discussed. Four different technologies, blockchain, fog computing, edge computing, and machine learning, to increase the level of security in IoT are discussed.},
+   author = {Vikas Hassija and Vinay Chamola and Vikas Saxena and Divyansh Jain and Pranav Goyal and Biplab Sikdar},
+   doi = {10.1109/ACCESS.2019.2924045},
+   issn = {21693536},
+   journal = {IEEE Access},
+   keywords = {Blockchain,Distributed systems,Edge computing,Fog computing,Internet of Things (IoT),IoT applications,IoT security,Machine learning},
+   pages = {82721-82743},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {A Survey on IoT Security: Application Areas, Security Threats, and Solution Architectures},
+   volume = {7},
+   year = {2019},
+}
+@article{Noor2019,
+   abstract = {The results of IoT failures can be severe, therefore, the study and research in security issues in the IoT is of extreme significance. The main objective of IoT security is to preserve privacy, confidentiality, ensure the security of the users, infrastructures, data, and devices of the IoT, and guarantee the availability of the services offered by an IoT ecosystem. Thus, research in IoT security has recently been gaining much momentum with the help of the available simulation tools, modellers, and computational and analysis platforms. This paper presents an analysis of recent research in IoT security from 2016 to 2018, its trends and open issues. The main contribution of this paper is to provide an overview of the current state of IoT security research, the relevant tools,IoT modellers and simulators.},
+   author = {Mardiana binti Mohamad Noor and Wan Haslina Hassan},
+   doi = {10.1016/j.comnet.2018.11.025},
+   issn = {13891286},
+   journal = {Computer Networks},
+   keywords = {Challenges,Current research,IoT security,Simulation},
+   month = {1},
+   pages = {283-294},
+   publisher = {Elsevier B.V.},
+   title = {Current research on Internet of Things (IoT) security: A survey},
+   volume = {148},
+   year = {2019},
+}
+@inproceedings{Zhang2014,
+   abstract = {The Internet of Things (IoT) opens opportunities for wearable devices, home appliances, and software to share and communicate information on the Internet. Given that the shared data contains a large amount of private information, preserving information security on the shared data is an important issue that cannot be neglected. In this paper, we begin with general information security background of IoT and continue on with information security related challenges that IoT will encountered. Finally, we will also point out research directions that could be the future work for the solutions to the security challenges that IoT encounters.},
+   author = {Zhi Kai Zhang and Michael Cheng Yi Cho and Chia Wei Wang and Chia Wei Hsu and Chong Kuan Chen and Shiuhpyng Shieh},
+   doi = {10.1109/SOCA.2014.58},
+   isbn = {9781479968336},
+   journal = {Proceedings - IEEE 7th International Conference on Service-Oriented Computing and Applications, SOCA 2014},
+   keywords = {Internet of Things,authenticity,identification,information security,malware,naming},
+   month = {12},
+   pages = {230-234},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {IoT security: Ongoing challenges and research opportunities},
+   year = {2014},
+}
+@patent{Pound2021,
+   author = {Michael Pound},
+   title = {Secret Key Exchange (Diffie-Hellman) - Computerphile - YouTube},
+   url = {https://www.youtube.com/watch?v=NmM9HA2MQGI},
+}
+@inproceedings{Delsing2017,
+   author = {Delsing Jerker},
+   title = {IoT Automation: Arrowhead Framework - 1st Edition - Jerker Delsing -},
+   url = {https://www.routledge.com/IoT-Automation-Arrowhead-Framework/Delsing/p/book/9780367658144},
+   year = {2017},
+}
+@inproceedings{Github2021,
+   title = {eclipse-arrowhead/core-java-spring},
+   url = {https://github.com/eclipse-arrowhead/core-java-spring},
+}
 @report{Hozdic2015,
    abstract = {Parallel to the development of information-communication technologies, the Internet, wireless networks, production networks, developed and industrial production which experienced a strong and profound changes. Factories have become more flexible than ever to complex modern market turbulence. Modern concepts of production systems require vertical and horizontal integration of all participants in the production process. This integration determines the foundation of a new, radical change in the mode of production by German industrialists called the industry is 4.0. In this, the smart production environment, structuring the smart factory. Smart factory is a production solution in a flexible and efficient way should be to meet the needs of today's market, and achieves integration between the various industrial and non-industrial partners who build dynamic, and very often and virtual organizations. This type of integration, linking the physical components of the production system and digital, abstract, virtual components into a single system called cyber-physical production systems. Systems are the backbone for the smart factory. Cyber-physical systems of production will be structured so that they can respond to almost any change in the market in time within really smart factories, but also beyond its borders. This not only makes production faster and in accordance with the specific requirements of individual customers, but also allows to production processes within the company are optimized through a network of global cooperation, adaptive and evolutionary and self-organizing. The potential for savings and innovation in these production systems and production operators is huge. Implementation of cyber-physical production systems in smart factories providing management with real-time, which is one of the fundamental principles of a new era in the sphere of industrial production.},
    author = {Elvis Hozdić},
@@ -89,20 +218,3 @@
    volume = {20},
    year = {2018},
 }
-@article{Github2021,
-   title = {eclipse-arrowhead/core-java-spring},
-   url = {https://github.com/eclipse-arrowhead/core-java-spring},
-}
-@book{Delsing2017,
-   author = {Delsing Jerker},
-   title = {IoT Automation: Arrowhead Framework - 1st Edition - Jerker Delsing -},
-   url = {https://www.routledge.com/IoT-Automation-Arrowhead-Framework/Delsing/p/book/9780367658144},
-   year = {2017},
-}
-@article{ST2020,
-   title = {The IoT Rundown For 2020: Stats, Risks, and Solutions -- Security Today},
-   url = {https://securitytoday.com/Articles/2020/01/13/The-IoT-Rundown-for-2020.aspx?Page=2},
-}
-
-
-
