Added section about comminucation and IoT.

--- a/Report/thesisreferences.bib
+++ b/Report/thesisreferences.bib
@@ -2,10 +2,7 @@
    title = {An overview of HTTP - HTTP | MDN},
    url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview},
 }
-@inproceedings{MQTT2021,
-   title = {MQTT - The Standard for IoT Messaging},
-   url = {https://mqtt.org/},
-}
+
 @inproceedings{Mahmoud2016,
    abstract = {The paper presents a survey and analysis on the current status and concerns of Internet of things (IoT) security. The IoT framework aspires to connect anyone with anything at anywhere. IoT typically has a three layers architecture consisting of Perception, Network, and Application layers. A number of security principles should be enforced at each layer to achieve a secure IoT realization. The future of IoT framework can only be ensured if the security issues associated with it are addressed and resolved. Many researchers have attempted to address the security concerns specific to IoT layers and devices by implementing corresponding countermeasures. This paper presents an overview of security principles, technological and security challenges, proposed countermeasures, and the future directions for securing the IoT.},
    author = {Rwan Mahmoud and Tasneem Yousuf and Fadi Aloul and Imran Zualkernan},
@@ -218,3 +215,25 @@
    volume = {20},
    year = {2018},
 }
+@inproceedings{MQTT2021,
+   title = {Getting Started with MQTT},
+   url = {https://www.hivemq.com/blog/how-to-get-started-with-mqtt/},
+}
+
+@article{Gubbi2013,
+   abstract = {Ubiquitous sensing enabled by Wireless Sensor Network (WSN) technologies cuts across many areas of modern day living. This offers the ability to measure, infer and understand environmental indicators, from delicate ecologies and natural resources to urban environments. The proliferation of these devices in a communicating-actuating network creates the Internet of Things (IoT), wherein sensors and actuators blend seamlessly with the environment around us, and the information is shared across platforms in order to develop a common operating picture (COP). Fueled by the recent adaptation of a variety of enabling wireless technologies such as RFID tags and embedded sensor and actuator nodes, the IoT has stepped out of its infancy and is the next revolutionary technology in transforming the Internet into a fully integrated Future Internet. As we move from www (static pages web) to web2 (social networking web) to web3 (ubiquitous computing web), the need for data-on-demand using sophisticated intuitive queries increases significantly. This paper presents a Cloud centric vision for worldwide implementation of Internet of Things. The key enabling technologies and application domains that are likely to drive IoT research in the near future are discussed. A Cloud implementation using Aneka, which is based on interaction of private and public Clouds is presented. We conclude our IoT vision by expanding on the need for convergence of WSN, the Internet and distributed computing directed at technological research community. © 2013 Elsevier B.V. All rights reserved.},
+   author = {Jayavardhana Gubbi and Rajkumar Buyya and Slaven Marusic and Marimuthu Palaniswami},
+   doi = {10.1016/j.future.2013.01.010},
+   issn = {0167739X},
+   issue = {7},
+   journal = {Future Generation Computer Systems},
+   keywords = {Cloud computing,Internet of Things,RFID Smart environments,Ubiquitous sensing,Wireless sensor networks},
+   month = {9},
+   pages = {1645-1660},
+   publisher = {North-Holland},
+   title = {Internet of Things (IoT): A vision, architectural elements, and future directions},
+   volume = {29},
+   year = {2013},
+}
+
+
